--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,6 @@
+@use "mixins" as mix;
+@use "variables" as var;
+
 body {
   font-family: "Source Sans Pro", sans-serif;
   line-height: 1.5;
@@ -13,40 +16,55 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-.section__article-innerarticle {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 2rem;
-}
 
-.section__article-div {
-  display: inline-flex;
-  flex-direction: column;
-  margin-top: 0;
-  margin-left: 1rem;
-}
-img {
-  margin-top: 0.5rem;
-}
 h1 {
   font-size: 2.5rem;
   text-align: center;
 }
-h2 {
-  font-size: 1.25rem;
-  margin: 0;
-}
-p {
-  font-size: 1rem;
-  margin: 0;
-}
-a {
-  color: rgba(255, 255, 255, 0.87);
-  cursor: pointer;
-}
-a :active,
-a:hover {
-  color: rgb(85, 85, 218);
+
+.section__podlist-pods {
+  @include mix.phone {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @include mix.desktop {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  &__article-innerarticle {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2rem;
+  }
+
+  img {
+    margin-top: 0.5rem;
+  }
+
+  &__article-div {
+    display: inline-flex;
+    flex-direction: column;
+    margin-top: 0;
+    margin-left: 1rem;
+
+    h2 {
+      font-size: 1.25rem;
+      margin: 0;
+    }
+    p {
+      font-size: 1rem;
+      margin: 0;
+    }
+    a {
+      color: rgba(255, 255, 255, 0.87);
+      cursor: pointer;
+    }
+    a :active,
+    a:hover {
+      color: rgb(85, 85, 218);
+    }
+  }
 }
 
 .darkmode {
@@ -59,15 +77,4 @@ a:hover {
 .darkmode a:active,
 .darkmode a:hover {
   color: rgb(85, 85, 218);
-}
-@media screen and (min-width: 1000px) {
-  .section__podlist-pods {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .section__podlist-pods {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
 }
