--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,8 +7,8 @@ body {
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var.$color-primary;
+  background-color: var.$color-secondary;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -57,24 +57,28 @@ h1 {
       margin: 0;
     }
     a {
-      color: rgba(255, 255, 255, 0.87);
+      color: var.$color-primary;
       cursor: pointer;
     }
     a :active,
     a:hover {
-      color: rgb(85, 85, 218);
+      color: var.$color-hover;
     }
   }
 }
 
 .darkmode {
   background-color: antiquewhite;
-  color: #242424;
+  color: var.$color-secondary;
 }
-.darkmode a {
-  color: #242424;
-}
-.darkmode a:active,
-.darkmode a:hover {
-  color: rgb(85, 85, 218);
+.darkmode {
+  a {
+    color: var.$color-secondary;
+  }
+  a:active {
+    color: var.$color-hover;
+  }
+  a:hover {
+    color: var.$color-hover;
+  }
 }
