changed name on file toggleDarkmode to toggleLightmode, and changed classname from dark to light

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -67,7 +67,7 @@ h1 {
   }
 }
 
-.darkmode {
+.lightmode {
   background-color: antiquewhite;
   color: var.$color-secondary;
   .section__podlist-pods {
