(fix) : deleted vite in package json.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -67,7 +67,7 @@ h1 {
   }
 }
 
-.lightmode {
+.darkmode {
   background-color: antiquewhite;
   color: var.$color-secondary;
   .section__podlist-pods {
